menu items gap fix

--- a/themes/ESGI-theme/src/css/components/_header.scss
+++ b/themes/ESGI-theme/src/css/components/_header.scss
@@ -106,8 +106,8 @@ $menu-gradient-start: #FFD0A8;
 			border: none;
 			cursor: pointer;
 			padding: 0;
-			width: 40px;
-			height: 30px;
+			width: 15px;
+			height: 15px;
 			z-index: 10000;
 			display: flex;
 			align-items: center;
@@ -148,7 +148,6 @@ $menu-gradient-start: #FFD0A8;
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
-			margin-bottom: 2rem;
 		}
 
 		.mobile-logo {
@@ -228,9 +227,8 @@ $menu-gradient-start: #FFD0A8;
 								bottom: 0;
 								left: 0;
 								width: 100%;
-								height: 4px;
+								height: 3.9px;
 								background: linear-gradient(to right, $menu-gradient-start, $menu-gradient-end);
-								border-radius: 2px;
 							}
 						}
 					}
