--- a/themes/ESGI-theme/style.css
+++ b/themes/ESGI-theme/style.css
@@ -4786,8 +4786,8 @@ section:last-child {
   border: none;
   cursor: pointer;
   padding: 0;
-  width: 40px;
-  height: 30px;
+  width: 15px;
+  height: 15px;
   z-index: 10000;
   display: flex;
   align-items: center;
@@ -4823,7 +4823,6 @@ section:last-child {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 2rem;
 }
 .site-header .mobile-navigation .mobile-logo {
   max-width: 120px;
@@ -4892,9 +4891,8 @@ section:last-child {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 4px;
+  height: 3.9px;
   background: linear-gradient(to right, #FFD0A8, #FF4FC0);
-  border-radius: 2px;
 }
 .site-header .mobile-navigation .mobile-nav-menu .mobile-menu-list li:last-child a {
   border-bottom: none;
